--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrolib/seo": "^1.0.0-beta.5",
-    "astro": "^4.14.2"
+    "astro": "^4.14.2",
+    "gsap-trial": "^3.12.5"
   }
 }
